# cococpp

./: .gitignore  CMakeLists.txt  README  README.md  main.cpp
libs/: cocoreader.cpp  cocoreader.h  util.cpp  util.h
ui/: preview.cpp  preview.h  preview.ui
